--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
-
+body{
+ea#banner {
+width: 100%;
+}
+h1 { 
+    text-align: center;
+}
+p{
+    text-align: center;
+}
+#missao{
+    font-size: 20px;
+}
+em strong {
+    color:azure
+}
